--- a/充电桩/ChargingPile.csproj
+++ b/充电桩/ChargingPile.csproj
@@ -39,11 +39,6 @@
   <ItemGroup>
     <Reference Include="IrisSkin4, Version=2006.3.22.45, Culture=neutral, PublicKeyToken=127be25a6db25e07, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Office.Interop.Excel, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-      <HintPath>C:\Program Files\Microsoft Office\Office14\Microsoft.Office.Interop.Excel.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -65,6 +60,7 @@
     <Reference Include="ZedGraph, Version=5.1.2.878, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\CPCRCCheck.cs" />
     <Compile Include="Class\CPDataCheck.cs" />
     <Compile Include="WinForm\SetChargePile.cs">
       <SubType>Form</SubType>
@@ -93,12 +89,6 @@
     </Compile>
     <Compile Include="Class\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WinForm\ParameterSet.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WinForm\ParameterSet.Designer.cs">
-      <DependentUpon>ParameterSet.cs</DependentUpon>
-    </Compile>
     <Compile Include="WinForm\SetComPara.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,9 +111,6 @@
     </Compile>
     <EmbeddedResource Include="WinForm\SetChargePile.resx">
       <DependentUpon>SetChargePile.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="WinForm\ParameterSet.resx">
-      <DependentUpon>ParameterSet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WinForm\SetComPara.resx">
       <DependentUpon>SetComPara.cs</DependentUpon>
@@ -154,17 +141,6 @@
     <Content Include="Resources\串口通信.csproj" />
     <Content Include="Resources\红灯.gif" />
     <Content Include="Resources\绿灯.gif" />
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="Microsoft.Office.Core">
-      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>4</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
