--- a/充电桩/ChargingPile.csproj
+++ b/充电桩/ChargingPile.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Class\CPCRCCheck.cs" />
     <Compile Include="Class\CPDataCheck.cs" />
+    <Compile Include="Class\CPHeartFrameDeal.cs" />
     <Compile Include="WinForm\SetChargePile.cs">
       <SubType>Form</SubType>
     </Compile>
